# nfs-scanner

./: .gitignore  PROJECT_STATUS.md  README.md  pyproject.toml
docs/: 00_index.md
requirements/: base.txt
src/nfs_scanner/: app.py  resources.py  version.py
src/nfs_scanner/assets/colormaps/: gray.json  jet.json  turbo.json  viridis.json
src/nfs_scanner/core/drivers/motion/: base.py  mock.py
src/nfs_scanner/core/drivers/spectrum/: base.py  mock.py
src/nfs_scanner/core/export/: exporters.py
src/nfs_scanner/core/scan/: scan_manager.py  scan_queue_manager.py  scan_runner.py  task_files.py  trace_store.py
src/nfs_scanner/core/visualization/: heatmap_export.py  lut_manager.py
src/nfs_scanner/infra/config/: config_manager.py  default_config.yaml
src/nfs_scanner/infra/logging/: setup.py
src/nfs_scanner/infra/storage/: paths.py  resources.py  schema.sql  sqlite_store.py
src/nfs_scanner/ui/: main_window.py
src/nfs_scanner/ui/dialogs/: task_detail_dialog.py
src/nfs_scanner/ui/widgets/: heatmap_view.py
