[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfs-scanner"
version = "0.0.1"
description = "Near-Field Scanning System (PySide6) - commercial-grade skeleton"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
